--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+.env
+
+
+# OAuth credentials
+client_secret*.json
+client_secret_*.json
