--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,16 @@ dependencies:
     sdk: flutter
   english_words: ^4.0.0
   provider: ^6.1.5
+  http: ^0.13.6
+  http_parser: ^4.0.2
+  path: ^1.9.0
+  shared_preferences: ^2.0.15
+  google_sign_in: ^6.2.2
+  file_picker: ^8.0.0
+  image_picker: ^1.0.7
+  video_player: ^2.8.2
+  audioplayers: ^6.0.0
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
