--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,14 @@ dependencies:
   video_player: ^2.8.2
   audioplayers: ^6.0.0
   url_launcher: ^6.2.4
+  flutter_secure_storage: ^9.2.4
+  dio: ^5.7.0
+  built_value: ^8.4.0
+  built_collection: ^5.1.1
+  one_of: ^1.5.0
+  one_of_serializer: ^1.5.0
+  net_api:
+    path: lib/generated_api
 
 dev_dependencies:
   flutter_test:
