feat: Implement WebSocket-based answer submission and explanation streaming
- Added AppConfig class for managing API and WebSocket URLs.
- Enhanced CompositeQuestion and related models to handle JSON parsing more robustly.
- Introduced AnswerSubmissionService for submitting answers via WebSocket.
- Updated QuestionService to support filtering questions by status and randomization.
- Created ExplanationSheet widget for displaying streaming explanations from WebSocket.
- Modified RandomQuestionsPage and TaxonomyNodePage to utilize the new answer submission flow.
- Added error handling and loading indicators during answer submission.
- Updated dependencies in pubspec.yaml and pubspec.lock for WebSocket and Markdown support.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   one_of_serializer: ^1.5.0
   net_api:
     path: lib/generated_api
+  web_socket_channel: ^3.0.3
+  flutter_markdown: ^0.6.14
 
 dev_dependencies:
   flutter_test:
